--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "route": "^0.2.5",
     "styled-components": "^6.1.13"
   },
-  
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
@@ -25,10 +25,10 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "react-router-dom": "^7.0.2",
     "vite": "^6.0.1"
   },
   "resolutions": {
-      "styled-components": "^5"
-    }
-  
+    "styled-components": "^5"
+  }
 }
